login y component application update style

--- a/src/app/all-web-services/all-web-services.component.html
+++ b/src/app/all-web-services/all-web-services.component.html
@@ -8,7 +8,7 @@
                 <mat-form-field style="width:50%; float: right; margin-top: 20px">
                     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
                 </mat-form-field>
-                <div style="width:50%;justify-content:flex-end;display: flex; flex-direction: row;">
+                <div style="width:50%;justify-content:flex-end;display: flex; flex-direction: row;color: white">
                     <div style="line-height: 42px">Create new Web Service</div>
                     <button mat-icon-button (click)="addWebService()">
               <mat-icon style="color: white" aria-label="add">add_circle</mat-icon>
