--- a/src/styles.css
+++ b/src/styles.css
@@ -11,96 +11,12 @@
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import "~codemirror/lib/codemirror.css";
 @import "~codemirror/theme/material.css";
-.BodyQueryEdit {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  background-color: #232323;
-  height: calc(100% - 50px);
-  padding: 30px 50px 60px 60px;
-}
-
-.headerWS {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-items: center;
-}
-
-.headerWS_Div {
-  align-items: center;
-  height: 70px;
-}
-
-.headerWsTitle {
-  padding: 0px;
-  margin: auto 0px;
-}
-
-.editQuery {
-  cursor: pointer;
-  width: 15%;
-  background-color: #232323;
-  height: 100%;
-}
-.editQuery img {
-  height: 25px;
-  margin: auto 0px auto 35px;
-}
-.editQuery div {
-  margin: 0px auto;
-  height: 25px;
-}
-
-.IconAct {
-  color: #01abec;
-  margin: 0px;
-  height: auto !important;
-}
-
-.IconEditQuery {
-  color: white;
-  margin: 0px;
-  height: auto !important;
-}
-
-.BodyWS {
-  display: flex;
-  flex-direction: column;
-  height: calc(100% - 70px);
-}
-
-.CodeMirror {
-  height: 300px !important;
-}
-
-.InfoQuery {
-  margin-bottom: 15px;
-  height: 241px;
-  font-weight: lighter;
-  text-align: justify;
-  background-color: #1e1e1e;
-  padding: 4px 10px;
-  overflow-y: auto;
-}
-
-.ocultar2 {
-  height: 0px !important;
-  transition: 0.25s;
-  padding: 0px !important;
-}
-
-.mostrar2 {
-  height: auto !important;
-  transition: 0.25s;
-}
-
-.ocultar {
-  display: none !important;
-}
-
-.mostrar {
-  display: block;
+body {
+  background-image: url("assets/images/fondo.png");
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  margin: 0;
+  overflow-x: hidden;
 }
 
 .application-class {
@@ -112,22 +28,26 @@
   background-color: #ED5C27;
 }
 
+.two-factor-auth-form .mat-checkbox-checked.mat-primary .mat-checkbox-background {
+  background-color: #ED5C27;
+}
+
 .login-form .mat-form-field.mat-focused .mat-form-field-ripple {
   background-color: #ED5C27;
 }
 
 .msf-header-icons2 {
   width: 100px;
-  height: 100%;
+  height: 60px;
   vertical-align: middle;
   margin-right: 20px;
-}
-
-body {
-  background-color: #1e1e1e;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  font-size: 12px;
-  margin: 0;
+  background-repeat: no-repeat;
+  background-position: left;
+  background-size: contain;
+  padding: 0px;
+  margin: 0px;
+  border: 0px;
+  object-fit: contain;
 }
 
 .mat-card {
@@ -181,14 +101,11 @@ body {
 }
 
 .msf-header-icons {
-  display: inline-block;
-  right: 0;
-  position: absolute;
-  line-height: 4;
-  vertical-align: middle;
-  min-height: 60px;
-  color: white;
-  margin-right: 10px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  width: calc(85% - 20px);
 }
 
 .header-icon {
@@ -405,7 +322,7 @@ p {
 
 .msf-button, .msf-app-button {
   background-color: #01abec !important;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .msf-float-right {
@@ -494,7 +411,7 @@ p {
 }
 
 .mat-form-field-appearance-legacy .mat-form-field-underline {
-  background-color: #3d3d3d;
+  background-color: #9E9E9E;
 }
 
 .mat-form-field-appearance-legacy.mat-form-field-can-float .mat-input-server:focus + .mat-form-field-label-wrapper .mat-form-field-label, .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label {
@@ -504,6 +421,10 @@ p {
   width: 133.33333%;
   margin-left: 7px;
   color: #ffffff !important;
+}
+
+.two-factor-auth-form .mat-form-field.mat-focused .mat-form-field-ripple {
+  background-color: #ED5C27;
 }
 
 .mat-error {
@@ -874,12 +795,13 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   color: white;
 }
 
-.mat-step-icon .mat-icon {
-  font-size: 16px;
-  height: 10px !important;
-  width: 16px !important;
-}
-
+/*.mat-step-icon .mat-icon kp20190516 me daña el login
+ *
+ *  font-size: 16px
+ *
+ *  height: 10px !important
+ *
+ *  width: 16px !important*/
 .msf-medium-title {
   color: white;
   font-size: 150%;
@@ -1136,43 +1058,59 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
   min-height: 60px;
   background-color: #333333;
   position: relative;
+  display: flex;
+  flex-direction: row;
+  max-height: 60px;
+  align-items: center;
+  max-width: 100%;
+  min-width: 100%;
 }
 
 .msf-menu-header-image-container {
-  width: 13%;
+  width: 15%;
   height: 100%;
+  max-height: 60px;
   min-height: 60px;
-  vertical-align: middle;
-  display: inline-block;
+  display: flex;
+  flex-direction: row;
   border-bottom-right-radius: 40px;
   border-top-right-radius: 40px;
   background-color: #3d3d3d;
+  align-items: center;
+  padding: 0px 10px;
+  vertical-align: middle;
 }
 
 .msf-menu-logo {
-  width: 55%;
-  height: 20%;
-  margin-left: 17px;
-  vertical-align: middle;
-  display: inline-block;
-  margin-top: 17px;
+  width: 70%;
+  height: 30px;
+  display: flex;
+  cursor: pointer;
+  background-position: left;
+  background-repeat: no-repeat;
+  background-size: contain;
+  object-fit: contain;
 }
 
 .msf-menu-ajustes-icon {
-  vertical-align: middle;
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  margin-left: 17px;
-  margin-top: 17px;
+  display: flex;
+  width: 30%;
+  height: 20px;
   cursor: pointer;
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: contain;
+  object-fit: contain;
 }
 
 .msf-menu-container {
   height: 100%;
   vertical-align: middle;
-  display: inline-block;
-  margin-left: 90px;
+  display: flex;
+  width: 60%;
+  text-align: center;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .msf-menu-option, .msf-menu-op-3, .msf-menu-op-2, .msf-menu-op-1 {
@@ -3867,11 +3805,11 @@ img.msf-calendar-image {
   display: none;
 }
 
-div {
-  color: white;
-  font-size: 14px;
-}
-
+/*div COMETANDO KP 2019/05/16 DAÑA EL LOGIN 
+ *
+ *  color: white
+ *
+ *  font-size: 14px*/
 .mat-horizontal-stepper-header-container {
   background-color: #1e1e1e;
   height: 50px;
@@ -3897,11 +3835,11 @@ div {
   width: 100%;
 }
 
-.mat-checkbox-label {
-  color: #ffffff;
-  font-size: 14px;
-}
-
+/*.mat-checkbox-label kp20190516 me daña el login
+ *
+ *  color: $msf-font-color
+ *
+ *  font-size: 14px*/
 .login-check .mat-checkbox-label {
   color: #1e1e1e !important;
 }
@@ -4004,20 +3942,18 @@ mat-select {
   display: none;
 }
 
-.mat-form-field {
-  height: 10px;
-}
-
+/*.mat-form-field kp20190519 me esta dañando el login
+ *
+ *  height: */
 .mat-select-value {
   line-height: 35px;
   color: #01abec;
   padding-left: 10px;
 }
 
-.mat-icon {
-  line-height: 10px;
-}
-
+/*.mat-icon kp20190519 me daña el login
+ *
+ *  line-height: 10px*/
 .search-input {
   color: white !important;
   width: 85% !important;
@@ -4083,12 +4019,103 @@ textarea.mat-input-element {
   padding: 5px;
 }
 
-.mat-form-field-infix {
-  border-top: 0em solid transparent;
-}
-
+/*.mat-form-field-infix kp20190516 me esta dañando el login
+ *
+ *  border-top: 0em solid transparent*/
 .placeholder {
   color: rgba(148, 147, 147, 0.87);
+}
+
+.BodyQueryEdit {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: #232323;
+  height: calc(100% - 50px);
+  padding: 30px 50px 60px 60px;
+}
+
+.headerWS {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.headerWS_Div {
+  align-items: center;
+  height: 70px;
+}
+
+.headerWsTitle {
+  padding: 0px;
+  margin: auto 0px;
+}
+
+.editQuery {
+  cursor: pointer;
+  width: 15%;
+  background-color: #232323;
+  height: 100%;
+}
+.editQuery img {
+  height: 25px;
+  margin: auto 0px auto 35px;
+}
+.editQuery div {
+  margin: 0px auto;
+  height: 25px;
+}
+
+.IconAct {
+  color: #01abec;
+  margin: 0px;
+  height: auto !important;
+}
+
+.IconEditQuery {
+  color: white;
+  margin: 0px;
+  height: auto !important;
+}
+
+.BodyWS {
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 70px);
+}
+
+.CodeMirror {
+  height: 300px !important;
+}
+
+.InfoQuery {
+  margin-bottom: 15px;
+  height: 241px;
+  font-weight: lighter;
+  text-align: justify;
+  background-color: #1e1e1e;
+  padding: 4px 10px;
+  overflow-y: auto;
+}
+
+.ocultar2 {
+  height: 0px !important;
+  transition: 0.25s;
+  padding: 0px !important;
+}
+
+.mostrar2 {
+  height: auto !important;
+  transition: 0.25s;
+}
+
+.ocultar {
+  display: none !important;
+}
+
+.mostrar {
+  display: block;
 }
 
 .darktable {
