--- a/src/styles.sass
+++ b/src/styles.sass
@@ -23,99 +23,14 @@
 
 @import "~codemirror/theme/material.css"
 
-//kp
-.BodyQueryEdit
-    display: flex
-    flex-direction: row
-    align-items: center
-    background-color: #232323
-    height: calc(100% - 50px)
-    padding: 30px 50px 60px 60px
 
-//kp
-.headerWS
-    display: flex
-    flex-direction: row
-    flex-wrap: wrap
-    align-items: center
-//kp
-.headerWS_Div
-    align-items: center
-    height: 70px
-//kp
-.headerWsTitle
-    padding: 0px
-    margin: auto 0px
-//kp
-.editQuery
-    cursor: pointer
-    width: 15%
-    background-color: #232323
-    height: 100%
-    img
-        height: 25px
-        margin: auto 0px auto 35px
-    div
-        margin: 0px auto
-        height: 25px
-
-//kp
-.IconAct
-    color: $msf-secondary-color
-    margin: 0px
-    height: auto !important
-
-.IconEditQuery
-    color: white
-    margin: 0px
-    // margin: auto 25px
-    // margin-left: 0px
-    // height: 15px
-    height: auto !important
-
-//kp
-.BodyWS
-    display: flex
-    flex-direction: column
-    height: calc(100% - 70px)
-//kp
-.CodeMirror
-    height: 300px !important
-//kp
-.InfoQuery
-    margin-bottom: 15px
-    height: 241px
-    font-weight: lighter
-    text-align: justify
-    background-color: #1e1e1e
-    padding: 4px 10px
-    overflow-y: auto
-
-    // textarea.mat-input-element
-    //     height: 240px !important
-    //     max-height: 240px !important
-    //     font-weight: lighter
-    //     font-size: 12px
-    //     text-align: justify
-
-//kp
-.ocultar2
-    // display: none  !important
-    height:  0px !important
-    transition: 0.25s
-    padding: 0px !important
-
-//kp
-.mostrar2
-    // display: block
-    height: auto !important
-    transition: 0.25s
-//kp
-.ocultar
-    display: none  !important
-//kp
-.mostrar
-    display: block
+body
+    // background-color: #1e1e1e
+    background-image: url("assets/images/fondo.png") 
+    font-family: $msf-font-family
+    font-size: $msf-font-size
+    margin: 0
+    overflow-x: hidden
 
 // kp20190423
 .application-class
@@ -126,6 +41,9 @@
 .login-form .mat-checkbox-checked.mat-primary .mat-checkbox-background
     background-color: $msf-secondary-color-orange
 
+.two-factor-auth-form .mat-checkbox-checked.mat-primary .mat-checkbox-background
+    background-color: $msf-secondary-color-orange
+
 //kp20190423
 .login-form .mat-form-field.mat-focused .mat-form-field-ripple
     background-color: $msf-secondary-color-orange
@@ -133,17 +51,17 @@
 //kp20190423
 .msf-header-icons2
     width: 100px
-    height: 100%
+    height: 60px
     vertical-align: middle
     margin-right: 20px
-
-
-body
-    background-color: #1e1e1e
-    font-family: $msf-font-family
-    font-size: $msf-font-size
-    margin: 0
-
+    // background-image: url("assets/images/logo_global_peqe.png")
+    background-repeat: no-repeat
+    background-position: left
+    background-size: contain
+    padding: 0px
+    margin: 0px
+    border: 0px
+    object-fit: contain
 
 .mat-card
     font-family: $msf-font-family
@@ -194,14 +112,11 @@ body
     font-size: x-large
 
 .msf-header-icons
-    display: inline-block
-    right: 0
-    position: absolute
-    line-height: 4
-    vertical-align: middle
-    min-height: 60px
-    color: white
-    margin-right: 10px
+    display: flex
+    flex-direction: row
+    align-items: center    
+    justify-content: flex-end
+    width: calc(85% - 20px)
 
 .header-icon
     width: 22px
@@ -469,7 +384,7 @@ p
     width: 100%!important
 
 .mat-form-field-appearance-legacy .mat-form-field-underline
-    background-color: $msf-primary-light-color
+    background-color: #9E9E9E
 
 .mat-form-field-appearance-legacy.mat-form-field-can-float .mat-input-server:focus+.mat-form-field-label-wrapper .mat-form-field-label, .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float .mat-form-field-label
     -webkit-transform: translateY(-1.739125em) scale(.75) perspective(100px) translateZ(.001px)
@@ -479,6 +394,9 @@ p
     margin-left: 7px
     // color: white!important //kp20190423
     color: $msf-font-color !important
+
+.two-factor-auth-form .mat-form-field.mat-focused .mat-form-field-ripple
+    background-color: $msf-secondary-color-orange
 
 .mat-error
     margin-left: 31px
@@ -670,6 +588,7 @@ p
     // color: white //20190423
     color: $msf-font-color-black
     padding-left: 31px
+    // padding-bottom: 5px
     background-size: 0 2px, 100% 1px
     background-position: 50% 100%, 50% 100%
     transition: background-size 0.3s cubic-bezier(0.64, 0.09, 0.08, 1)
@@ -814,10 +733,10 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
         background-color: $msf-secondary-color
         color: white
 
-.mat-step-icon .mat-icon
+/*.mat-step-icon .mat-icon kp20190516 me daña el login
     font-size: 16px
     height: 10px !important
-    width: 16px !important
+    width: 16px !important*/
 
 .msf-medium-title
     color: white
@@ -1038,42 +957,57 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button
     min-height: 60px
     background-color: $msf-primary-color
     position: relative
+    display: flex
+    flex-direction: row
+    max-height: 60px
+    align-items: center    
+    max-width: 100%
+    min-width: 100%
 
-.msf-menu-header-image-container
-    width: 13% //kp20190423
-    // width: 265px //kp20190423
+.msf-menu-header-image-container 
+    width: 15%
     height: 100%
+    max-height: 60px
     min-height: 60px
-    vertical-align: middle
-    display: inline-block
+    display: flex
+    flex-direction: row
     border-bottom-right-radius: 40px
     border-top-right-radius: 40px
     background-color: $msf-primary-light-color
+    align-items: center
+    padding: 0px 10px
+    vertical-align: middle	
 
 .msf-menu-logo
-    //width: 170px //kp20190423
-    //height: 27px//kp20190423
-    width: 55% //kp20190423
-    height: 20% //kp20190423
-    margin-left: 17px
-    vertical-align: middle
-    display: inline-block
-    margin-top: 17px
+    width: 70%
+    height: 30px
+    display: flex
+    // background-image: url("assets/images/pulse_welc.png")
+    cursor: pointer
+    background-position: left
+    background-repeat: no-repeat
+    background-size: contain
+    object-fit: contain
 
 .msf-menu-ajustes-icon
-    vertical-align: middle
-    display: inline-block
-    width: 30px
-    height: 30px
-    margin-left: 17px
-    margin-top: 17px
+    display: flex
+    width: 30%
+    height: 20px
     cursor: pointer
+    // background-image: url("assets/images/ajustes.png")
+    background-position: right
+    background-repeat: no-repeat
+    background-size: contain
+    object-fit: contain
 
 .msf-menu-container
     height: 100%
     vertical-align: middle
-    display: inline-block
-    margin-left: 90px
+    display: flex							
+    width: 60%
+    text-align: center
+    flex-direction: row
+    justify-content: center
 
 .msf-menu-option
     height: 100%
@@ -3374,9 +3308,10 @@ img.msf-calendar-image
     color: #333
     display: none
 
-div
+
+/*div COMETANDO KP 2019/05/16 DAÑA EL LOGIN 
     color: white
-    font-size: 14px
+    font-size: 14px*/
 
 
 .mat-horizontal-stepper-header-container
@@ -3405,9 +3340,9 @@ div
     width: 100%
 
 
-.mat-checkbox-label
+/*.mat-checkbox-label kp20190516 me daña el login
     color: $msf-font-color
-    font-size: 14px
+    font-size: 14px*/
 
 //kp20190423
 .login-check .mat-checkbox-label
@@ -3514,8 +3449,8 @@ mat-select
   display: none
 
 
-.mat-form-field
-    height: 10px
+/*.mat-form-field kp20190519 me esta dañando el login
+    height: */
 
 
 .mat-select-value
@@ -3524,8 +3459,8 @@ mat-select
     padding-left: 10px
 
 
-.mat-icon
-    line-height: 10px
+/*.mat-icon kp20190519 me daña el login
+    line-height: 10px*/
 
 
 .search-input
@@ -3592,12 +3527,106 @@ textarea.mat-input-element
     padding: 5px
 
 
-.mat-form-field-infix
-    border-top: 0em solid transparent
+/*.mat-form-field-infix kp20190516 me esta dañando el login
+    border-top: 0em solid transparent*/
 
 
 .placeholder
     color: rgba(148, 147, 147, 0.87)
+
+//kp
+.BodyQueryEdit
+    display: flex
+    flex-direction: row
+    align-items: center
+    background-color: #232323 
+    height: calc(100% - 50px)
+    padding: 30px 50px 60px 60px
+
+//kp
+.headerWS
+    display: flex
+    flex-direction: row
+    flex-wrap: wrap
+    align-items: center
+//kp
+.headerWS_Div
+    align-items: center
+    height: 70px
+//kp
+.headerWsTitle
+    padding: 0px
+    margin: auto 0px
+//kp
+.editQuery
+    cursor: pointer
+    width: 15%
+    background-color: #232323
+    height: 100%
+    img
+        height: 25px
+        margin: auto 0px auto 35px
+    div
+        margin: 0px auto
+        height: 25px
+
+//kp
+.IconAct
+    color: $msf-secondary-color
+    margin: 0px
+    height: auto !important
+
+.IconEditQuery
+    color: white
+    margin: 0px
+    // margin: auto 25px
+    // margin-left: 0px
+    // height: 15px
+    height: auto !important
+
+//kp
+.BodyWS
+    display: flex
+    flex-direction: column
+    height: calc(100% - 70px)
+//kp
+.CodeMirror
+    height: 300px !important
+//kp
+.InfoQuery
+    margin-bottom: 15px
+    height: 241px
+    font-weight: lighter
+    text-align: justify
+    background-color: #1e1e1e
+    padding: 4px 10px
+    overflow-y: auto
+
+    // textarea.mat-input-element
+    //     height: 240px !important
+    //     max-height: 240px !important
+    //     font-weight: lighter
+    //     font-size: 12px
+    //     text-align: justify
+
+//kp
+.ocultar2
+    // display: none  !important
+    height:  0px !important
+    transition: 0.25s
+    padding: 0px !important
+
+//kp
+.mostrar2
+    // display: block
+    height: auto !important
+    transition: 0.25s
+//kp
+.ocultar
+    display: none  !important
+//kp
+.mostrar
+    display: block
 
 .darktable
     background-color: #1e1e1e
@@ -3607,6 +3636,7 @@ textarea.mat-input-element
     background-color:#232323
     color: white
     justify-content: center
+
 
 
 
