underline color to secondary

--- a/src/styles.css
+++ b/src/styles.css
@@ -511,7 +511,7 @@ p {
 }
 
 .mat-form-field.mat-focused .mat-form-field-ripple {
-  background-color: #333333;
+  background-color: #01abec;
 }
 
 .mat-form-field-ripple {
