--- a/src/styles.sass
+++ b/src/styles.sass
@@ -485,7 +485,7 @@ p
 
 
 .mat-form-field.mat-focused .mat-form-field-ripple
-    background-color: #333333
+    background-color: $msf-secondary-color
 
 .mat-form-field-ripple
     background-color: $msf-secondary-color
