connection component and get back grouping

--- a/src/app/application/application.component.html
+++ b/src/app/application/application.component.html
@@ -39,6 +39,11 @@
                   <mat-icon>settings</mat-icon>
                   <span>Web Services Summary</span>
               </button>
+            <button *ngIf="globals.currentApplication != 'conn'" mat-menu-item (click)="getOption('conn')">
+                <mat-icon>settings</mat-icon>
+                <span>Admin Connections</span>
+            </button>
+
         </mat-menu>
 
     </div>
@@ -51,6 +56,7 @@
 <app-web-services *ngIf="globals.currentApplication == 'create'"></app-web-services>
 <app-all-web-services *ngIf="globals.currentApplication == 'list'"></app-all-web-services>
 <app-test *ngIf="globals.currentApplication == 'test'"></app-test>
+<app-connections *ngIf="globals.currentApplication == 'conn'"></app-connections>
 <!--container-->
 <div>
 
