--- a/src/app/web-services/web-services.component.html
+++ b/src/app/web-services/web-services.component.html
@@ -49,7 +49,10 @@
                         <p style="color: #ED5C27;">{{error.code}}</p> - - - {{error.message}}
                     </div>
                 </div>
-                <button mat-flat-button class="flat-button button-publish" (click)="validate()" style=" margin: auto; padding: 0px; width: 200px;">Validate</button>
+                <div style="display: flex;flex-direction:column;">
+                    <button mat-flat-button class="flat-button button-publish" (click)="validate()" style=" margin: auto; padding: 0px; width: 200px;">Validate</button>
+                    <mat-checkbox [(ngModel)]="checkBool" (change)="checkValidate()">Validate columns</mat-checkbox>
+                </div>
             </div>
         </div>
         <!-- <mat-horizontal-stepper style="height: 100%;" (selectionChange)="getSelectedColumns()"> -->
@@ -533,7 +536,6 @@
                                                 <mat-option value="ASC">Asc</mat-option>
                                             </mat-select>
                                         </div>
-                                        x
                                         <mat-divider *ngIf="item.typePresentation == 'value' && item.orderByBool">
                                         </mat-divider>
                                         <div *ngIf="item.typePresentation=='aggregate'" style="display: flex;flex-direction:column;">
